--- a/login.html
+++ b/login.html
@@ -10,27 +10,14 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card">
-                    <form class="box">
-                        <h1>Login</h1>
-                        <p class="text-muted"> Please enter your login and password!!!</p> <input type="text" name="" placeholder="Username"> <input type="password" name="" placeholder="Password"> <a class="forgot text-muted" href="#">Forgot password?</a> <input type="submit"
-                            name="" value="Login" href="#">
-                        <div class="col-md-12">
-                            <ul class="social-network social-circle">
-                                <li><a href="#" class="icoFacebook" title="Facebook">Facebook<i class="fab fa-facebook-f"></i></a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                <li><a href="#" class="icoTwitter" title="Twitter">Twitter<i class="fab fa-twitter"></i></a></li>&nbsp;
-                                <li><a href="#" class="icoGoogle" title="Google +">Google<i class="fab fa-google-plus"></i></a></li>
-                            </ul>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <form class="box">
+        <h1>Login</h1>
+        <p class="text"> Please enter your login and password!!!</p>
+        <input type="text" name="" placeholder="Username">
+        <input type="password" name="" placeholder="Password">
+        <a href="#">Forgot password?</a>
+        <input type="submit" name="" value="Login" href="#">
+    </form>
 </body>
 
 </html>
